Home page enhancement

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,6 @@
-nav {background-color: darkblue;
+
+nav {
+    background-color: darkblue;
     padding: 10px;
 }
 
@@ -8,19 +10,51 @@ nav a {
     padding: 20px;
 }
 
+
 h1 {
     color: darkblue;
 }
 
-img {
+
+main {
+    width: 840px;
+    margin: 0 auto;
+}
+
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 0.2); /* 1️⃣ */
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+  }
+
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+
+main img {
     width: 150px;
     height: auto;
-    border: 1px solid balck;
+    border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
 
+
 p {
-    padding: 10px;
+    padding: 0;
 }
 
+
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: centerle;
+}
