--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,60 +1,70 @@
+:root {
+    --dark-blue: darkblue;
+    --white: white;
+    --light-gray: #eee;
+    --dark-gray: #333;
+    --black: black;
+    --semi-transparent-black: rgb(0 0 0 / 0.2);
+    --box-shadow-gray: gray;
+    --main-width: 840px;
+    --aside-width: 20rem;
+    --aside-margin: 1rem;
+    --aside-padding: 1rem;
+    --footer-margin-top: 15px;
+    --image-width-main: 150px;
+    --image-width-aside: 200px;
+    --border-width: 1px;
+}
 
 nav {
-    background-color: darkblue;
+    background-color: var(--dark-blue);
     padding: 10px;
 }
 
 nav a {
-    color: white;
+    color: var(--white);
     display: black;
     padding: 20px;
 }
 
-
 h1 {
-    color: darkblue;
+    color: var(--dark-blue);
 }
 
-
 main {
-    width: 840px;
+    width: var(--main-width);
     margin: 0 auto;
 }
 
-
 aside {
-    width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2); /* 1️⃣ */
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
+    width: var(--aside-width);
+    margin: var(--aside-margin);
+    border: var(--border-width) solid var(--semi-transparent-black); /* 1️⃣ */
+    padding: var(--aside-padding);
+    background-color: var(--light-gray);
+    color: var(--dark-gray);
     text-align: center;
-  }
-
+}
 
 aside img {
-    width: 200px;
+    width: var(--image-width-aside);
     height: auto;
 }
-
 
 main img {
-    width: 150px;
+    width: var(--image-width-main);
     height: auto;
-    border: 1px solid black;
+    border: var(--border-width) solid var(--black);
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow: 0 0 30px var(--box-shadow-gray);
 }
-
 
 p {
     padding: 0;
 }
 
-
 footer {
-    margin-top: 15px;
-    border-top: 1px solid #000;
-    text-align: centerle;
+    margin-top: var(--footer-margin-top);
+    border-top: var(--border-width) solid var(--black);
+    text-align: center;
 }
