--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,12 @@
     --border-width: 1px;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 nav {
     background-color: var(--dark-blue);
     padding: 10px;
@@ -33,7 +39,7 @@ h1 {
 
 main {
     width: var(--main-width);
-    margin: 0 auto;
+    margin: 0 var(--aside-margin);
 }
 
 aside {
@@ -46,6 +52,12 @@ aside {
     text-align: center;
 }
 
+aside h2 {
+    position: absolute;
+    top: 290px;
+    left: 80px;
+  }
+
 aside img {
     width: var(--image-width-aside);
     height: auto;
@@ -57,6 +69,7 @@ main img {
     border: var(--border-width) solid var(--black);
     padding: 2px;
     box-shadow: 0 0 30px var(--box-shadow-gray);
+    float: right;
 }
 
 p {
@@ -66,5 +79,14 @@ p {
 footer {
     margin-top: var(--footer-margin-top);
     border-top: var(--border-width) solid var(--black);
-    text-align: center;
+    text-align: centerr;
 }
+
+/* Class selectors */
+.box {
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / .1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+  }
