student home page font enhancement

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rock+Salt&display=swap');
+
 :root {
     --dark-blue: darkblue;
     --white: white;
@@ -90,3 +92,11 @@ footer {
     background-color: #ddd;
     color: #000;
   }
+
+  body {
+    font-family: Roboto, Helvetica, sans-serif;
+}
+
+h1 {
+    font-family: 'Rock Salt', 'Bradley Hand', cursive';
+}
