--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rock+Salt&display=swap');
+
 :root {
     --red: #D63230;
     --orange: white;
@@ -6,11 +8,15 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0;
     max-width: 960px;
     margin: 0 auto;
+}
+
+h1 {
+    font-family: 'Rock salt', 'Bradley Hand', cursive';
 }
 
 header {
@@ -128,3 +134,9 @@ footer .social-links a img {
     height: auto;
     text-decoration: none;
 }
+
+section h2 {
+    color: var(--red);
+}
+
+
