--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -140,3 +140,92 @@ section h2 {
 }
 
 
+.contact-container {
+    padding: 10px;
+    max-width: 5px;
+    margin: 0 auto;
+  }
+  
+  .contact-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-center;
+    margin-bottom: 20px;
+  }
+  
+  .contact-info div {
+    flex: 1;
+    margin: 10px;
+  }
+  
+  .contact-info iframe {
+    width: 100%;
+    height: 150px;
+    border: none;
+  }
+  
+  .contact-form {
+    background: var(--red);
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .contact-form label {
+    display: block;
+    margin: 10px 0 5px;
+    font-weight: bold;
+  }
+  
+  .contact-form input,
+  .contact-form select,
+  .contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .contact-form input[type="checkbox"] {
+    width: auto;
+    margin-right: 5px;
+  }
+  
+  .contact-form button {
+    background: var(--secondary-color);
+    color: white;
+    border: solid;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .contact-form button:hover {
+    background: var(--primary-color);
+  }
+  
+  .employee-profiles {
+    display: flex;
+    justify-content: space-around;
+    margin: 10px 0;
+  }
+  
+  .employee-profiles figure {
+    text-align: center;
+    margin: 10px;
+  }
+  
+  .employee-profiles img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 3px solid var(--light-blue);
+  }
+  
+  .employee-profiles figcaption {
+    margin-top: 10px;
+    font-weight: bold;
+  }
+
+
